# SALES_IQ

./: .gitignore  README.md
.github/workflows/: deploy-agent.yml  deploy-cloudrun.yml  deploy-full.yml  gemini-enterprise-agent.yml  gemini-enterprise-app.yml  setup-agent-infra.yml  setup-infra.yml
agents/knowledge-iq/: SAMPLE_PROMPTS.md
agents/knowledge-iq/enterpriseGPT/: Makefile  agent.py  config.py  env.example  file_converter.py  prompts.py  pyproject.toml  test_connectors.py
agents/knowledge-iq/enterpriseGPT/agent-card/: agent-card.json
agents/knowledge-iq/enterpriseGPT/config/: prompt.example.txt  prompt.txt  tools_config.example.json  tools_config.json
agents/knowledge-iq/enterpriseGPT/deploy/: deploy.py  deploy_full.py  deployment_state.json  setup_infra.py  sync_deploy.sh  update_agent.py
agents/knowledge-iq/enterpriseGPT/deploy/scripts/: setup_connector.py
agents/knowledge-iq/enterpriseGPT/docs/: README.md  RESTRUCTURING_PLAN.md  architecture.drawio  budget.md  connector_credentials_guide.md  cost_report.md  design.md  implementation.md  new_connectors_credentials_guide.md  sample_prompts.md
agents/knowledge-iq/enterpriseGPT/evaluation/: test_config.json
agents/knowledge-iq/enterpriseGPT/evaluation/test_cases/: atlassian.test.json
agents/knowledge-iq/enterpriseGPT/scheduler/: Dockerfile  config.py  job.py  webhook_server.py
agents/ops-iq/OpsIQ/: Makefile  agent.py  agent_engine_app.py  callbacks.py  config.py  env.example  prompts.py  pyproject.toml
agents/ops-iq/OpsIQ/agent-card/: agent-card.json
agents/ops-iq/OpsIQ/config/: prompt.example.txt  prompt.txt  tools_config.example.json  tools_config.json
agents/ops-iq/OpsIQ/deploy/: deploy.py  deploy_full.py  run.py  sync_deploy.sh
agents/ops-iq/OpsIQ/deploy/scripts/: upload_config.py  upload_prompt.py
agents/ops-iq/OpsIQ/docs/: README.md  RESTRUCTURING_PLAN.md  budget.md  cost_report.md  design.md  implementation.md  sample_prompts.md
agents/ops-iq/OpsIQ/evaluation/: conftest.py  run_eval.py
agents/ops-iq/OpsIQ/evaluation/test_cases/: ops_iq.test.json
agents/ops-iq/OpsIQ/memory/: project_notes.md
agents/ops-iq/OpsIQ/scheduler/: Dockerfile  run_scheduled_check.py
agents/sales-iq/aura/: Makefile  agent.py  agent_engine_app.py  config.py  env.example  eval_set_1.evalset.json  prompts.py  pyproject.toml
agents/sales-iq/aura/AURA_orch/: model_config.json  tools_config.json
agents/sales-iq/aura/AURA_orch/session/: firestore_store.py  models.py  session_manager.py
agents/sales-iq/aura/AURA_orch/tools/: registry.py  sales_tools.py
agents/sales-iq/aura/agent-card/: agent-card.json
agents/sales-iq/aura/booking_agent/: agent.py  model_config.json  prompt.md
agents/sales-iq/aura/dealdesk_agent/: model_config.json  tools_config.json
agents/sales-iq/aura/deploy/: deploy.py  deploy_full.py
agents/sales-iq/aura/deploy/scripts/: upload_config.py  upload_prompt.py
agents/sales-iq/aura/discovery_agent/: tools_config.json
agents/sales-iq/aura/proposal_agent/: prompt.md  tools_config.json
agents/sales-iq/aura/qualification_agent/: agent.py  model_config.json  prompt.md  tools_config.json
agents/sales-iq/aura/revenue_agent/: model_config.json  prompt.md
deployment/: create_gemini_enterprise_agent.sh  create_gemini_enterprise_app.sh  deploy_agent.sh  deploy_cloudrun.sh  secret_utils.sh  setup_infra.sh
docs/: Cost_Budget_Report.docx  Laabu_Master_Document_v1.docx  Laabu_Master_Document_v2.docx  github-actions-pipelines.md
tools/: __init__.py  ops_iq_registry.py  registry.py
tools/a2a/: a2a_tools.py
tools/alerting/: alerting_tool.py
tools/atlassian/: confluence_tool.py  jira_tool.py
tools/firestore/: usage_tracker_tool.py
tools/github/: github_tool.py
tools/google/: gchat_tool.py  gdrive_tool.py  gemini_connector_tool.py  gmail_tool.py  metrics_tool.py  quota_tool.py
tools/hrm/: bamboohr_tool.py  rippling_tool.py  workday_tool.py
tools/microsoft/: graph_utils.py  (+3 more)
(+142 files in other folders)
