[project]
name = "sales-iq"
version = "0.1.0"
description = "AURA Sales IQ — Multi-agent revenue acceleration system with dynamic tool configuration and runtime prompt management"
requires-python = ">=3.11,<3.13"

dependencies = [
    "google-cloud-aiplatform[adk,agent-engines]==1.153.1",
    "google-adk==1.34.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.8.1",
    "google-cloud-storage>=2.0",
    "google-auth>=2.36.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "msal>=1.20.0",
    "beautifulsoup4>=4.12.0",
    "google-cloud-firestore>=2.16.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.6",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E501", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["sales_iq"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.agent-starter-pack.settings]
agent_directory = "sales_iq"
deployment_targets = ["agent_engine"]
